--- a/launcher/src/main/res/layout/launcher.xml
+++ b/launcher/src/main/res/layout/launcher.xml
@@ -47,19 +47,19 @@
             android:layout_width="match_parent"
             android:layout_height="0dp" />
 
-        <TextView
+        <ImageView
             android:layout_width="match_parent"
             android:layout_height="20dp"
+            android:layout_margin="6dp"
             android:contentDescription="@string/openDrawer"
-            android:text="@string/up"
-            android:textAlignment="center"
-            android:textSize="24sp"
-            android:textStyle="bold" />
+            android:src="@drawable/ic_up" />
 
         <LinearLayout
             android:layout_width="fill_parent"
-            android:layout_height="60dp"
-            android:orientation="horizontal">
+            android:layout_height="80dp"
+            android:padding="10dp"
+            android:orientation="horizontal"
+            android:background="@color/light_light_bg">
 
             <ImageView
                 android:id="@+id/ivDock1"
@@ -74,7 +74,7 @@
                 android:paddingEnd="5dp"
                 android:paddingStart="5dp"
                 android:scaleType="fitCenter"
-                android:src="@drawable/ic_launcher" />
+                android:src="@drawable/ic_round" />
 
             <ImageView
                 android:id="@+id/ivDock2"
@@ -89,7 +89,7 @@
                 android:paddingEnd="5dp"
                 android:paddingStart="5dp"
                 android:scaleType="fitCenter"
-                android:src="@drawable/ic_launcher" />
+                android:src="@drawable/ic_round" />
 
             <ImageView
                 android:id="@+id/ivDock3"
@@ -104,7 +104,7 @@
                 android:paddingStart="5dp"
                 android:paddingEnd="5dp"
                 android:scaleType="fitCenter"
-                android:src="@drawable/ic_launcher" />
+                android:src="@drawable/ic_round" />
 
             <ImageView
                 android:id="@+id/ivDock4"
@@ -119,7 +119,7 @@
                 android:paddingEnd="5dp"
                 android:paddingStart="5dp"
                 android:scaleType="fitCenter"
-                android:src="@drawable/ic_launcher" />
+                android:src="@drawable/ic_round" />
 
             <ImageView
                 android:id="@+id/ivDock5"
@@ -134,7 +134,7 @@
                 android:paddingStart="5dp"
                 android:paddingEnd="5dp"
                 android:scaleType="fitCenter"
-                android:src="@drawable/ic_launcher" />
+                android:src="@drawable/ic_round" />
 
             <ImageView
                 android:id="@+id/ivDock6"
