--- a/launcher/src/main/res/values-v21/themes.xml
+++ b/launcher/src/main/res/values-v21/themes.xml
@@ -20,13 +20,8 @@
     <style name="API21ActivityStyle" parent="@android:style/Theme.DeviceDefault.Wallpaper">
         <item name="android:statusBarColor">@android:color/transparent</item>
         <item name="android:navigationBarColor">@android:color/transparent</item>
-        <item name="android:actionBarStyle">@style/EssentialLauncherActionBar</item>
-        <item name="android:windowActionBarOverlay">true</item>
-    </style>
-
-    <!-- ActionBar styles -->
-    <style name="EssentialLauncherActionBar"
-        parent="@android:style/Widget.Holo.Light.ActionBar.Solid.Inverse">
-        <item name="android:background">@android:color/transparent</item>
+        <item name="android:windowActionBarOverlay">false</item>
+        <item name="android:windowActionBar">false</item>
+        <item name="android:windowNoTitle">true</item>
     </style>
 </resources>
