Fix App Grid Items
- Remove click ripple highlight
- Center the contents

--- a/launcher/src/main/res/layout/launcher.xml
+++ b/launcher/src/main/res/layout/launcher.xml
@@ -191,7 +191,8 @@
             android:scrollbarStyle="insideOverlay"
             android:smoothScrollbar="false"
             android:stretchMode="columnWidth"
-            android:verticalSpacing="5dp" />
+            android:verticalSpacing="5dp"
+            android:listSelector="@android:color/transparent" />
     </LinearLayout>
 
     <LinearLayout
