--- a/launcher/src/main/res/layout/grid_drawer_item.xml
+++ b/launcher/src/main/res/layout/grid_drawer_item.xml
@@ -22,6 +22,7 @@
     android:layout_height="100dp"
     android:minHeight="100dp"
     android:orientation="vertical"
+    android:gravity="center_vertical"
     tools:ignore="UseCompoundDrawables">
 
     <ImageView
