--- a/launcher/src/main/res/layout-land/launcher.xml
+++ b/launcher/src/main/res/layout-land/launcher.xml
@@ -46,14 +46,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
-        <TextView
+        <ImageView
             android:layout_width="match_parent"
             android:layout_height="20dp"
+            android:layout_margin="6dp"
             android:contentDescription="@string/openDrawer"
-            android:text="@string/up"
-            android:textAlignment="center"
-            android:textSize="24sp"
-            android:textStyle="bold" />
+            android:src="@drawable/ic_up" />
 
         <LinearLayout
             android:layout_width="fill_parent"
@@ -73,7 +71,7 @@
                 android:paddingEnd="5dp"
                 android:paddingStart="5dp"
                 android:scaleType="fitCenter"
-                android:src="@drawable/ic_launcher" />
+                android:src="@drawable/ic_round" />
 
             <ImageView
                 android:id="@+id/ivDock2"
@@ -88,7 +86,7 @@
                 android:paddingEnd="5dp"
                 android:paddingStart="5dp"
                 android:scaleType="fitCenter"
-                android:src="@drawable/ic_launcher" />
+                android:src="@drawable/ic_round" />
 
             <ImageView
                 android:id="@+id/ivDock3"
@@ -103,7 +101,7 @@
                 android:paddingEnd="5dp"
                 android:paddingStart="5dp"
                 android:scaleType="fitCenter"
-                android:src="@drawable/ic_launcher" />
+                android:src="@drawable/ic_round" />
 
             <ImageView
                 android:id="@+id/ivDock4"
@@ -118,7 +116,7 @@
                 android:paddingEnd="5dp"
                 android:paddingStart="5dp"
                 android:scaleType="fitCenter"
-                android:src="@drawable/ic_launcher" />
+                android:src="@drawable/ic_round" />
 
             <ImageView
                 android:id="@+id/ivDock5"
@@ -133,7 +131,7 @@
                 android:paddingEnd="5dp"
                 android:paddingStart="5dp"
                 android:scaleType="fitCenter"
-                android:src="@drawable/ic_launcher" />
+                android:src="@drawable/ic_round" />
 
             <ImageView
                 android:id="@+id/ivDock6"
@@ -148,7 +146,7 @@
                 android:paddingEnd="5dp"
                 android:paddingStart="5dp"
                 android:scaleType="fitCenter"
-                android:src="@drawable/ic_launcher" />
+                android:src="@drawable/ic_round" />
 
             <ImageView
                 android:id="@+id/ivDock7"
@@ -163,7 +161,7 @@
                 android:paddingEnd="5dp"
                 android:paddingStart="5dp"
                 android:scaleType="fitCenter"
-                android:src="@drawable/ic_launcher" />
+                android:src="@drawable/ic_round" />
         </LinearLayout>
 
     </LinearLayout>
@@ -188,7 +186,8 @@
             android:paddingRight="10dp"
             android:smoothScrollbar="false"
             android:stretchMode="columnWidth"
-            android:verticalSpacing="5dp" />
+            android:verticalSpacing="5dp"
+            android:listSelector="@android:color/transparent" />
     </LinearLayout>
 
     <LinearLayout
