--- a/launcher/src/main/res/layout/list_drawer_item.xml
+++ b/launcher/src/main/res/layout/list_drawer_item.xml
@@ -21,6 +21,8 @@
     android:layout_width="fill_parent"
     android:layout_height="48dp"
     android:minHeight="48dp"
+    android:padding="6dp"
+    android:gravity="center_vertical"
     tools:ignore="UseCompoundDrawables">
 
     <ImageView
