--- a/launcher/src/main/res/values-v28/themes.xml
+++ b/launcher/src/main/res/values-v28/themes.xml
@@ -17,12 +17,10 @@
   -->
 
 <resources>
-    <style name="API28ActivityStyle" parent="API21ActivityStyle">
+    <style name="API28ActivityStyle" parent="Theme.AppCompat.NoActionBar">
         <item name="android:windowLayoutInDisplayCutoutMode">shortEdges</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
-        <item name="android:navigationBarColor">@android:color/transparent</item>
-        <item name="android:windowActionBarOverlay">false</item>
-        <item name="android:windowActionBar">false</item>
-        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:windowShowWallpaper">true</item>
     </style>
 </resources>
