--- a/launcher/src/main/res/values/themes.xml
+++ b/launcher/src/main/res/values/themes.xml
@@ -17,9 +17,8 @@
   -->
 
 <resources>
-    <style name="API17ActivityStyle" parent="android:Theme.Holo.Wallpaper.NoTitleBar">
-        <item name="android:windowActionBarOverlay">false</item>
-        <item name="android:windowActionBar">false</item>
-        <item name="android:windowNoTitle">true</item>
+    <style name="API17ActivityStyle" parent="Theme.AppCompat.NoActionBar">
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:windowShowWallpaper">true</item>
     </style>
 </resources>
