Drop multiple themes and use variants
- Drop ThemeUtil Class
- Use standard Support library themes

--- a/launcher/src/main/res/values-v21/themes.xml
+++ b/launcher/src/main/res/values-v21/themes.xml
@@ -17,9 +17,7 @@
   -->
 
 <resources>
-    <style name="API21ActivityStyle" parent="Theme.AppCompat.NoActionBar">
+    <style name="LauncherActivityStyle" parent="AppBase.LauncherActivityStyle">
         <item name="android:statusBarColor">@android:color/transparent</item>
-        <item name="android:windowBackground">@android:color/transparent</item>
-        <item name="android:windowShowWallpaper">true</item>
     </style>
 </resources>
