--- a/launcher/src/main/res/values/themes.xml
+++ b/launcher/src/main/res/values/themes.xml
@@ -17,8 +17,10 @@
   -->
 
 <resources>
-    <style name="API17ActivityStyle" parent="Theme.AppCompat.NoActionBar">
+    <style name="AppBase.LauncherActivityStyle" parent="Theme.AppCompat.NoActionBar">
         <item name="android:windowBackground">@android:color/transparent</item>
         <item name="android:windowShowWallpaper">true</item>
     </style>
+
+    <style name="LauncherActivityStyle" parent="AppBase.LauncherActivityStyle" />
 </resources>
